<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.mankala.MenuViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/titleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/playBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="36dp"
            android:text="@string/play"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/player1TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/player1"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/player1Menu"
            app:layout_constraintEnd_toEndOf="@+id/player1Menu"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="@+id/player1Menu"
            app:layout_constraintTop_toBottomOf="@+id/titleTV" />

        <TextView
            android:id="@+id/player2TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/player2"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/player2Menu"
            app:layout_constraintStart_toStartOf="@+id/player2Menu"
            app:layout_constraintTop_toBottomOf="@+id/titleTV" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/player1Menu"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintEnd_toStartOf="@id/player2Menu"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/player1TV">

            <AutoCompleteTextView
                android:id="@+id/player1AUTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/player_type"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/player2Menu"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/player1Menu"
            app:layout_constraintTop_toBottomOf="@id/player2TV">

            <AutoCompleteTextView
                android:id="@+id/player2AUTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/player_type"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/player1MinMaxTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/player1MinMaxSlider"
            app:layout_constraintEnd_toStartOf="@id/player1MinMaxSlider"
            app:layout_constraintTop_toTopOf="@id/player1MinMaxSlider"
            tools:text="5" />

        <com.google.android.material.slider.Slider
            android:id="@+id/player1MinMaxSlider"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:stepSize="1"
            android:valueFrom="1"
            android:valueTo="@integer/min_max_maximum"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/player1Menu"
            app:layout_constraintStart_toStartOf="@id/player1Menu"
            app:layout_constraintTop_toBottomOf="@id/player1Menu"
            app:thumbColor="@color/white"
            app:thumbRadius="10dp"
            app:thumbStrokeColor="@color/purple_700"
            app:thumbStrokeWidth="5dp"
            app:tickColorActive="@color/purple_500"
            app:tickColorInactive="@color/purple_200"
            app:trackColorActive="@color/purple_500"
            app:trackColorInactive="@color/purple_200"
            app:trackHeight="10dp"
            tools:value="5" />

        <TextView
            android:id="@+id/player2MinMaxTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/player2MinMaxSlider"
            app:layout_constraintEnd_toStartOf="@id/player2MinMaxSlider"
            app:layout_constraintTop_toTopOf="@id/player2MinMaxSlider"
            tools:text="5" />

        <com.google.android.material.slider.Slider
            android:id="@+id/player2MinMaxSlider"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:stepSize="1"
            android:valueFrom="1"
            android:valueTo="@integer/min_max_maximum"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/player2Menu"
            app:layout_constraintStart_toStartOf="@id/player2Menu"
            app:layout_constraintTop_toBottomOf="@id/player2Menu"
            app:thumbColor="@color/white"
            app:thumbRadius="10dp"
            app:thumbStrokeColor="@color/purple_700"
            app:thumbStrokeWidth="5dp"
            app:tickColorActive="@color/purple_500"
            app:tickColorInactive="@color/purple_200"
            app:trackColorActive="@color/purple_500"
            app:trackColorInactive="@color/purple_200"
            app:trackHeight="10dp"
            tools:value="5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
